fixed last bezier curve for the background image squish
it's not perfect, but it's pretty close.  Absolutely phenomenal time sink though.

--- a/src/CSS/gallery.css
+++ b/src/CSS/gallery.css
@@ -33,7 +33,6 @@
   top: 0vh;
 }
  .galSpin{
-  visibility: hidden;
   position: relative;
   transform-style: preserve-3d;
   left: 50vw;
@@ -124,7 +123,7 @@
 .gallery{
   --timing1: cubic-bezier(0.68, 0.26, 0.83, 0.67);
   --timing2: cubic-bezier(0.48, 0.36, 0.68, 0.49);
-  --timing3: cubic-bezier(0.61, 0.19, 0.92, 0.66);
+  --timing3: cubic-bezier(0.71, 0.09, 0.83, 0.44);
   --timing4: cubic-bezier(0.54, 0.33, 0.77, 0.47);
   --timing5: cubic-bezier(0.01, 0.01, 0.47, 0.71);
   --timing6: cubic-bezier(0.49, 0.18, 0.84, 0.66);
@@ -187,7 +186,7 @@
 @keyframes galbend3 { 43%, 100% {transform: none;}
                       55%, 90%  {transform: rotateX( 45deg);}}
 @keyframes galscale3{ 43%, 100% {scale: 100% 100%;}
-                      55%, 90%  {scale: 100% 158%;}}
+                      55%, 90%  {scale: 100% 143%;}}
 @keyframes galbend4 {  0%, 55%  {transform: none;}
                       10%, 43%  {transform: rotateX(-45deg)}}
 @keyframes galscale4{  0%, 55%  {scale: 100% 100%;}
